ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    # Cert from ACM
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:924809052459:certificate/c6dfa95c-a9ae-412e-ba6d-2e90df48b5e2
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443, "HTTP": 80}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/subnets: subnet-0206c76d52d4fae18, subnet-0c193732fbc075911
    alb.ingress.kubernetes.io/success-codes: 200-399
    # Without this annotation, gateway-service must be defined as a service of type: NodePort
    alb.ingress.kubernetes.io/target-type: "ip"
    alb.ingress.kubernetes.io/healthcheck-path: /login # TODO: Update this path as needed
spec:
  ingressClassName: alb
  rules:
    # Could add "- host: <host-name>" to have all rules apply to a hostname, which would likely be api.skillstorm-congo.com.
    # However, by omitting the host name, the rules will apply to all inbound traffic. Given we're using Route53 and the GatewayService,
    # adding the host may be redundant.
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway-service
                port:
                  number: 8125
